Transform title, content and shortReport
RISDEV-9029